Terminación de la página

--- a/index.html
+++ b/index.html
@@ -101,14 +101,44 @@
     </div>
   </nav>
 
+  <main class="main">
+    <section class="main__grid">
+      <picture class="main__picture">
+
+        <source srcset="./images/image-hero-desktop.png" class="main__img" media="(min-width:768px)">
+
+        <img src="./images/image-hero-mobile.png" class="main__img">
+
+      </picture>
+
+      <article class="main__article">
+        <div class="main__text">
+
+          <h1 class="main__title">Make remote work</h1>
+          <p class="main__paragraph">Get your team in sync, no matter your location. Streamline processes, 
+            create team rituals, and watch productivity soar.</p>
+            <a href="#" class="main__cta">Learn more</a>
+
+        </div>
+
+        <div class="main__brands">
+          <img src="./images/client-databiz.svg" alt="Data biz (logo)" class="main__brand">
+          <img src="./images/client-audiophile.svg" alt="Audiophile (logo)" class="main__brand">
+          <img src="./images/client-meet.svg" alt="Meet (logo)" class="main__brand">
+          <img src="./images/client-maker.svg" alt="Maker (logo)" class="main__brand">
+        </div>
+
+      </article>
+    </section>
+  </main>
 
 
-  Make remote work
 
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
+  
 
-  Learn more
+  
+
+  
   
 <script src="./js/menu.js"></script>
 </body>
